# MiniDaw

./: Cargo.toml  README.md
MIDI/: ZELDA_3.mid  gerudo.mid  pirate.mid  rush.mid  stillalive.mid  stillalive2.mid  zelda.mid
src/: ArgsChecker.rs  DSP.rs  MidiParser.rs  chord.rs  m_note.rs  main.rs  noise.rs  sawtooth.rs  sin.rs  square.rs  triangle.rs  waveforms.rs  writer.rs
